<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#231810">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Toolbar Section -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#231810"
            android:elevation="4dp"
            app:menu="@menu/top_bar_menu"
            app:navigationIcon="@drawable/home"
            app:title="The Reusables App"
            app:titleCentered="true"
            app:titleTextColor="@color/white">

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Heading Section -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_heading"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/home_description"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <!-- Cards Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <!-- For Restaurants Card -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="#342318"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="4dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/for_restaurants_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/for_restaurants"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/get_started_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="4dp"
                            android:text="@string/get_started"
                            android:textColor="#CBA890"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="@+id/for_restaurants_tv"
                            app:layout_constraintTop_toBottomOf="@+id/for_restaurants_tv" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/for_restaurants_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:backgroundTint="#493222"
                            android:paddingHorizontal="20dp"
                            android:text="@string/scan"
                            android:textColor="@color/white"
                            app:cornerRadius="32dp"
                            app:layout_constraintStart_toStartOf="@+id/get_started_tv"
                            app:layout_constraintTop_toBottomOf="@+id/get_started_tv" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="100dp"
                            android:layout_height="0dp"
                            android:contentDescription="@string/for_restaurants"
                            android:scaleType="centerCrop"
                            android:src="@drawable/restaurant"
                            app:layout_constraintBottom_toBottomOf="@+id/for_restaurants_btn"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/for_restaurants_tv"
                            app:shapeAppearanceOverlay="@style/RoundedCorners" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <!-- For Customers Card -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="#342318"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="4dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/for_customers_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/for_customers"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/order_now_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="4dp"
                            android:text="@string/order_now"
                            android:textColor="#CBA890"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="@+id/for_customers_tv"
                            app:layout_constraintTop_toBottomOf="@+id/for_customers_tv" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/for_customers_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:backgroundTint="#493222"
                            android:paddingHorizontal="20dp"
                            android:text="@string/scan"
                            android:textColor="@color/white"
                            app:cornerRadius="32dp"
                            app:layout_constraintStart_toStartOf="@+id/order_now_tv"
                            app:layout_constraintTop_toBottomOf="@+id/order_now_tv" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="100dp"
                            android:layout_height="0dp"
                            android:contentDescription="@string/for_customers"
                            android:scaleType="centerCrop"
                            android:src="@drawable/customer"
                            app:layout_constraintBottom_toBottomOf="@+id/for_customers_btn"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/for_customers_tv"
                            app:shapeAppearanceOverlay="@style/RoundedCorners" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <!-- For Delivery Partners Card -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="#342318"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="4dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/for_delivery_partners"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="4dp"
                            android:text="@string/start_delivering"
                            android:textColor="#CBA890"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="@+id/textView2"
                            app:layout_constraintTop_toBottomOf="@+id/textView2" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/for_delivery_partners_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:backgroundTint="#493222"
                            android:paddingHorizontal="20dp"
                            android:text="@string/scan"
                            android:textColor="@color/white"
                            app:cornerRadius="32dp"
                            app:layout_constraintStart_toStartOf="@+id/textView3"
                            app:layout_constraintTop_toBottomOf="@+id/textView3" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="100dp"
                            android:layout_height="0dp"
                            android:contentDescription="@string/for_delivery_partners"
                            android:scaleType="centerCrop"
                            android:src="@drawable/delivery_partner"
                            app:layout_constraintBottom_toBottomOf="@+id/for_delivery_partners_btn"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/textView2"
                            app:shapeAppearanceOverlay="@style/RoundedCorners" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="24dp"
                android:text="@string/info_text"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
